# lark

./: README.md
.github/workflows/: builds.yaml
gcp/: README.md
gcp/autostart-spot-instance/: Dockerfile  configs.py  logs.py  main.py  pyproject.toml  utils.py
gcp/autostart-spot-instance/phenex/: configs.py  logs.py
gcp/phenex/: .dockerignore  Dockerfile  README.md  phenex.autostart-spot-vm.yaml.sample  pyproject.toml
gcp/phenex/phenex/: main.py  schema.py  utils.py
housekeeping/docker/: README.md  dd.sh  delete-dangling-image.sh  delete-local-image.sh  gitlab-runner-cleanup.sh  housekeeping.cron.sample  prune-image.sh
installs/: install-apache-airflow.sh
migration/postgres/: postgres-dump-role-only.sh  postgres-dump.selective.sh  postgres-dump.sh  postgres-restore.sh  vars.sample
monitoring/grafana/: cloudquery.postgres.alicloud-assets-inventory.json  cloudquery.postgres.cloudflare-inventory.json  cloudquery.postgres.gcp-asset-inventory.json
systemd/prometheus/: README.md  prometheus-alertmanager.service  prometheus-mongodbexporter.service  prometheus-nodeexporter.service  prometheus-pushgateway.service  prometheus.service
utils/: gen-self-signed-cert.sh
