[tool.poetry]
name = "phenex"
version = "0.1.0"
description = "Autostart stopped SPOT VM instance"
authors = ["widnyana <widnyana@koinworks.com>"]
license = "WTFPL"
readme = "README.md"
packages = [{ include = "phenex" }]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-compute = "^1.16.1"
pydantic = "^2.6.1"
ruamel-yaml = "^0.18.6"
pydantic-yaml = "^1.2.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120


[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E501", # line too long, handled by black
    "C901", # too complex
]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.poetry.scripts]
phenex = "phenex.main:main"